Update index.html with about section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         </div>
 
     <!-- put code after here -->
+	
+	<div>
+		<p class="aboutPar"> 
+		At the American Cancer Society, we're on a mission to free the world from cancer.
+		Until we do, we'll be funding and conducting research, sharing expert information,
+		supporting patients, and spreading the word about prevention.
+		All so you can live longer — and better.
+		</p>
+		<p>
+  		  To <a href="contact.html">Donate</a>. <br>
+    		  For more information, please <a href="contact.html">contact</a> us.
+		</p>
+	</div>
     
 </body>
 </html>
