--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="about.css">
@@ -52,7 +53,7 @@
         </p>
 
 		<p class=aboutPar2>
-  		  To <a href="contact.html">Donate</a>. <br>
+  		  To <a href="donate.html">Donate</a>. <br>
     		  For more information, please <a href="contact.html">contact</a> us.
 		</p>
 	</div>
