--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="contact.css">
@@ -29,13 +30,13 @@
             </div>
             
             <div class="CONTACT_DETAILS">
-                <b>If you have any questions about giving to the American Cancer Society, please complete the form and someone will be in touch very soon. You may also reach us by phone or email.</b>
+                <b>If you have any questions about giving to the Cancer Research of America, please complete the form and someone will be in touch very soon. You may also reach us by phone or email.</b>
             </div>
         </div>
 
         <div class="email_phone">
             <br><br>
-            <b>Email:</b> AmericanCancerSociety@gmail.com
+            <b>Email:</b> CancerResearchOfAmerica@CRA.com
             <br><br>
             <b>Phone:</b> 212-123-4567
         </div>
