this is a commit mahdi

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Ubuntu:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="about.css">
 	<title>Cancer Research of America</title>
@@ -11,9 +12,9 @@
     <!-- NAVBAR -->
         <div class="nav">
             <a class="nav_link nav_partners"><p class="nav_about">partners</p></a>
-            <a class="nav_link"><p class="nav_donate">donate</p></a>
-            <a class="nav_link"><p class="nav_contact">contact</p></a>
-            <a class="nav_link"><p>about</p></a>
+            <a class="nav_link" href="donate.html"><p class="nav_donate">donate</p></a>
+            <a class="nav_link" href="contact.html"><p class="nav_contact">contact</p></a>
+            <a class="nav_link" href="index.html"><p>about</p></a>
             <div class="nav_div">
                 <a class="nav_partners_link"><p>one</p></a>
                 <a class="nav_partners_link"><p>two</p></a>
