--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Ubuntu:300&display=swap" rel="stylesheet">
@@ -11,15 +12,23 @@
 <body>
     <!-- NAVBAR -->
         <div class="nav">
-            <a class="nav_link nav_partners"><p class="nav_about">partners</p></a>
-            <a class="nav_link" href="donate.html"><p class="nav_donate">donate</p></a>
-            <a class="nav_link" href="contact.html"><p class="nav_contact">contact</p></a>
-            <a class="nav_link" href="index.html"><p>about</p></a>
+            <a class="nav_link nav_partners">
+                <p>partners</p>
+            </a>
+            <a class="nav_link" href="donate.html">
+                <p class="nav_donate">donate</p>
+            </a>
+            <a class="nav_link" href="contact.html">
+                <p class="nav_contact">contact</p>
+            </a>
+            <a class="nav_link nav_about" href="index.html">
+                <p>about</p>
+            </a>
             <div class="nav_div">
-                <a class="nav_partners_link"><p>one</p></a>
-                <a class="nav_partners_link"><p>two</p></a>
-                <a class="nav_partners_link"><p>three</p></a>
-                <a class="nav_partners_link"><p>four</p></a>
+                <a>one</a>
+                <a>two</a>
+                <a>three</a>
+                <a>four</a>
             </div>
         </div>
 
@@ -30,7 +39,7 @@
             <p class= banner1P>
                   Welcome to the<br>American Cancer<br>    Society
             </p>    
-            </div>
+        </div>
 
 		<p class="aboutPar"> 
 		At the American Cancer Society, we're on a mission to free the world from cancer. <br>
@@ -52,6 +61,7 @@
                 run parallel with our mission to outsmart cancer – a feat that would be impossible <br>
                 without donor support. 
         </p>
+        <hr>
 
 		<p class=aboutPar2>
   		  To <a href="donate.html">Donate</a>. <br>
