--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Ubuntu:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="contact.css">
-	<title>Cancer Research of America</title>
+    <title>Cancer Research of America</title>
 </head>
 <body>
     <!-- NAVBAR -->
         <div class="nav">
-            <a class="nav_link nav_partners"><p class="nav_about">partners</p></a>
-            <a class="nav_link" href="donate.html"><p class="nav_donate">donate</p></a>
-            <a class="nav_link" href="contact.html"><p class="nav_contact">contact</p></a>
-            <a class="nav_link" href="index.html"><p>about</p></a>
+            <a class="nav_link nav_partners">
+                <p>partners</p>
+            </a>
+            <a class="nav_link" href="donate.html">
+                <p class="nav_donate">donate</p>
+            </a>
+            <a class="nav_link" href="contact.html">
+                <p class="nav_contact">contact</p>
+            </a>
+            <a class="nav_link nav_about" href="index.html">
+                <p>about</p>
+            </a>
             <div class="nav_div">
-                <a class="nav_partners_link"><p>one</p></a>
-                <a class="nav_partners_link"><p>two</p></a>
-                <a class="nav_partners_link"><p>three</p></a>
-                <a class="nav_partners_link"><p>four</p></a>
+                <a>one</a>
+                <a>two</a>
+                <a>three</a>
+                <a>four</a>
             </div>
         </div>
 
