last one of the day

--- a/donate.html
+++ b/donate.html
@@ -66,25 +66,32 @@
                     <div class="two_">
                         <p>Card Information:</p>
                         <input type="text" name="fullname" placeholder="NAME ON CARD">
+                        <br>
                         <input type="text" name="card_number" placeholder="####-####-####-####">
-                        <div class="month_year">
-                            <p>Expires: </p>
-                            <input type="text" name="month" placeholder="MONTH">
-                            <p>/</p>
-                            <input type="number" name="day" placeholder="YEAR">
-                        </div>
-                        <div class="security_code">
-                            <p>Security Code:</p>
-                            <input type="number" name="code">
+                        <div class="two_A">
+                            <div class="month_year">
+                                <p>Expires: </p>
+                                <div class="month_year_A">
+                                    <input type="text" name="month" placeholder="MONTH">
+                                    <input type="number" name="day" placeholder="YEAR">
+                                </div>
+                            </div>
+                            <div class="security_code">
+                                <p>Security Code:</p>
+                                <input type="number" name="code">
+                            </div>
                         </div>
                     </div>
                 </div>
 
+                <hr>
+
                 <div class="terms_conditions">
-                    <label><input type="checkbox" name="news_letter"> Sign up for our weekly news letter.</label>
-                    <label><input type="checkbox" name="agree"> I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms I agree to the terms.</label>
+                    <label class="first_check"><input type="checkbox" name="news_letter"> Sign up for our weekly news letter.</label>
+                    <br>
+                    <label class="second_check"><input type="checkbox" name="agree"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</label>
                 </div>
-                <button>Submit</button>
+                <button class="submit_btn">Submit</button>
             </div>
         </div>
     
