--- a/index.html
+++ b/index.html
@@ -61,12 +61,27 @@
                 run parallel with our mission to outsmart cancer – a feat that would be impossible <br>
                 without donor support. 
         </p>
+
+        <div class="banner3">
+            <p>Join the fight.</p>
+        </div>
+
+        <p class="aboutPar">
+                American Cancer Society is at the forefront of cancer care, and has made <br> 
+                promising advances in precision medicine, immunotherapy, computational oncology, <br>
+                and so much more. The achievements, innovations, and ground-breaking discoveries <br>
+                run parallel with our mission to outsmart cancer – a feat that would be impossible <br>
+                without donor support. 
+        </p>
+
         <hr>
 
 		<p class=aboutPar2>
   		  To <a href="donate.html">Donate</a>. <br>
     		  For more information, please <a href="contact.html">contact</a> us.
 		</p>
+
+
 	</div>
     
 
