--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>Join the fight.</p>
         </div>
 
-        <p class="aboutPar">
+        <p class="aboutPar aboutParLast">
                 American Cancer Society is at the forefront of cancer care, and has made <br> 
                 promising advances in precision medicine, immunotherapy, computational oncology, <br>
                 and so much more. The achievements, innovations, and ground-breaking discoveries <br>
