--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,16 @@
 <body>
     <!-- NAVBAR -->
         <div class="nav">
-            <a class="nav_link nav_partners">
-                <p>partners</p>
-            </a>
+            <div class="nav_partners">
+                <p class="thing">partners</p>
+                <div class="nav_div">
+                    <a><p>U.S. Department of Health</p></a>
+                    <a><p>Bill & Melinda Gates Foundation</p></a>
+                    <a><p>The Don</p></a>
+                    <a><p>National Foundation</p></a>
+                    <a><p>Hunter CS Department</p></a>
+                </div>
+            </div>
             <a class="nav_link" href="donate.html">
                 <p class="nav_donate">donate</p>
             </a>
@@ -24,12 +31,6 @@
             <a class="nav_link nav_about" href="index.html">
                 <p>about</p>
             </a>
-            <div class="nav_div">
-                <a>one</a>
-                <a>two</a>
-                <a>three</a>
-                <a>four</a>
-            </div>
         </div>
 
     <!-- Contact US Page -->
