--- a/contact.html
+++ b/contact.html
@@ -61,13 +61,13 @@
 
         <div class ="Form">
             <form action="/action_page.php">
-            <b>First Name:<br><input type="text" name="fname"></b><br><br>
-            <b>Last Name:<br><input type="text" name="lname"></b>
+            <b>First Name:<br><input type="text" id="contact_box"></b><br><br>
+            <b>Last Name:<br><input type="text" id="contact_box"></b>
             <br><br>
-            <b>Email:<br><input type="text" name="email"></b>
+            <b>Email:<br><input type="text" id="contact_box"></b>
             <br><br>
-            <textarea rows="10" cols="80" name="userInput">Enter text here...</textarea><br><br>
-            <input type="submit" value="Send Message">
+            <textarea rows="10" cols="80" name="userInput" id="userInput">Enter text here...</textarea><br><br>
+            <input type="submit" value="Send Message" id= "SubmitButton">
         </div>
 
     </div>
